--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=University;Database=University;Integrated Security=True"
-  }
+  },
+  "FrontendUrl": "https://localhost:7103"
 }
