feat: enrollment page, endpoints, simpler models, refactors

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=University;Database=University;Integrated Security=True"
   },
-  "FrontendUrl": "https://localhost:7103"
+  "FrontendUrl": "https://localhost:7103",
+  "MaxResponseRowCount": 20
 }
