--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -10,6 +10,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=University;Database=University;Integrated Security=True"
   },
-  "FrontendUrl": "https://localhost:7103",
-  "MaxResponseRowCount": 20
+  "FrontendUrl": "https://localhost:7103"
 }
